# renderer-gpu

./: CMakeLists.txt  notes
cmake/: FindSFML.cmake
resources/models/: model_checkers.004.ply  model_checkers.017.ply  model_preview.002.ply  model_preview.003.ply  model_preview.006.ply  model_preview.ply  model_previewcube.ply  model_previewhair.ply  model_texture.ply
resources/scenes/: blender_scene.xml  test_scene.xml
src/: main.cpp
src/core/: camera.cpp  camera.h  flags.h  geometrypool.cpp  geometrypool.h  globalsettings.cpp  globalsettings.h  image.cpp  image.h  lightdata.h  lightpool.cpp  lightpool.h  materialdata.h  materialpool.cpp  materialpool.h  opengl_renderer.cpp  opengl_renderer.h  optix_renderer.cpp  optix_renderer.h  perraydata.h  primitivepool.cpp  primitivepool.h  scene.cpp  scene.h  texture.cpp  texture.h  vertexattributes.h
src/math/: basic.h  rng.h
src/shaders/: any_hit.cu  bsdf_sampling.cu  closest_hit.cu  exception.cu  light_sampling.cu  miss.cu  raygeneration.cu  triangle_bbox.cu  triangle_intersection.cu
src/utils/: config.h  fileutil.cpp  fileutil.h  log.cpp  log.h  stats.cpp  stats.h
